I believe the data library is finished. I'm about to (hopefully) bring everything together with the user classes.